--- a/src/css/App.css
+++ b/src/css/App.css
@@ -42,6 +42,11 @@ body {
   background: #3e1735;
   color: white;
 }
+@media only screen and (min-width: 993px) {
+  body {
+    padding-left: 300px;
+  }
+}
 ul#slide-out {
     background: #5f0f40;
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a90329+0,8f0222+34,8f0222+51,8f0222+66,6d0019+100 */
@@ -136,8 +141,9 @@ div.section {
   background: #fb8b24;
 } */
 
-p.btn-small, a.btn-small {
+p.btn-small, a.btn-small, button[type="submit"], input[type="submit"], button.btn {
   background: #0f4c5c;
+  margin: 0 5px;
 }
 
 nav.top-nav {
@@ -149,7 +155,7 @@ nav.top-nav {
 }
 
 .row .col.s3.movie-card {
-  min-height: 650px;
+  min-height: 630px;
   max-height: 650px;
   /* padding-bottom: 5px; */
 }
@@ -157,5 +163,26 @@ nav.top-nav {
 .col-content {
   background:#6d496d;
   padding-bottom: 15px;
+  min-height: 610px;
+}
 
+/* header, main, footer {
+  padding-left: 300px;
+} */
+
+@media only screen and (max-width : 592px) {
+  header, main, footer {
+    padding-left: 0;
+  }
+}
+
+footer {
+  background: #5f0f40;
+  width: 100%;
+  /* height: 70px; */
+  padding: 20px;
+}
+
+nav.top-nav {
+  height: 70px;
 }
