--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
-header, main, footer {
+/* header, main, footer {
   padding-left: 300px;
-}
+} */
 
 @media only screen and (max-width : 692px) {
   header, main, footer {
