--- a/src/css/App.css
+++ b/src/css/App.css
@@ -249,3 +249,7 @@ h1.header {
   margin-bottom: 1.68rem;
   margin-left: 2.5em;
 }
+
+form#searchForm input[type="text"] {
+  background: white;
+}
